classDiagram
    direction TB

    namespace Infrastructure_REST {
        class OrdemServicoResourceImpl {
            +reprovarOrcamento(ordemServicoId, ReprovarOrcamentoReqDTO) Response
        }
    }

    namespace Infrastructure_CrossCutting {
        class AuditoriaProxy {
            <<cross-cutting>>
            +envolver(T, Class~T~, RegistrarAuditoriaPort) T
            -interceptar(method, args) Any
        }
    }

    namespace Application_Ports_In {
        class ReprovarOrcamentoUseCase {
            <<interface>>
            +reprovarOrcamento(ordemServicoId, ReprovarOrcamentoReqDTO) ResumoOrdemServicoResDTO
        }
    }

    namespace Application_Service {
        class ReprovarOrcamentoService {
            +reprovarOrcamento(ordemServicoId, ReprovarOrcamentoReqDTO) ResumoOrdemServicoResDTO
            -validarClienteTitular(os, solicitanteId)
            -devolverInsumosAoEstoque(insumos)
        }
    }

    namespace Application_Ports_Out {
        class JwtPort {
            <<interface>>
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryPort {
            <<interface>>
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class InsumoRepositoryPort {
            <<interface>>
            +buscarPorId(InsumoId) Insumo?
            +atualizar(Insumo) Insumo
        }
        class RegistrarAuditoriaPort {
            <<interface>>
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    namespace Domain {
        class OrdemServico {
            <<aggregate root>>
            +clienteId UsuarioId
            +status StatusOrdemServico
            +listarInsumos() List~InsumoId~
            +reprovarOrcamento(motivo)
        }
        class Insumo {
            +adicionarAoEstoque(quantidade)
        }
    }

    namespace Infrastructure_Adapters {
        class JwtAdapter {
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryAdapter {
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class InsumoRepositoryAdapter {
            +buscarPorId(InsumoId) Insumo?
            +atualizar(Insumo) Insumo
        }
        class AuditoriaRepositoryAdapter {
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    OrdemServicoResourceImpl --> ReprovarOrcamentoUseCase : invoca

    AuditoriaProxy ..|> ReprovarOrcamentoUseCase : wrap (Java Proxy)
    AuditoriaProxy --> ReprovarOrcamentoService : delega execução
    AuditoriaProxy --> RegistrarAuditoriaPort : notifica após @Auditavel

    ReprovarOrcamentoService ..|> ReprovarOrcamentoUseCase : implementa
    ReprovarOrcamentoService --> JwtPort : getUsuarioId()
    ReprovarOrcamentoService --> OrdemServicoRepositoryPort : buscarPorId() atualizar()
    ReprovarOrcamentoService --> InsumoRepositoryPort : buscarPorId() atualizar()
    ReprovarOrcamentoService --> OrdemServico : listarInsumos() reprovarOrcamento()
    ReprovarOrcamentoService --> Insumo : adicionarAoEstoque()

    JwtAdapter ..|> JwtPort : implementa
    OrdemServicoRepositoryAdapter ..|> OrdemServicoRepositoryPort : implementa
    InsumoRepositoryAdapter ..|> InsumoRepositoryPort : implementa
    AuditoriaRepositoryAdapter ..|> RegistrarAuditoriaPort : implementa
